--- a/static/css/style.css
+++ b/static/css/style.css
@@ -570,7 +570,9 @@ section {
 
 .contact .info .email:hover i,
 .contact .info .address:hover i,
-.contact .info .phone:hover i {
+.contact .info .phone:hover i,
+.contact .info .linkedin:hover i,
+.contact .info .github:hover i{
   background: #149ddd;
   color: #fff;
 }
