--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             class="img-fluid rounded-circle"
           />
           <h5 class="text-light">
-            <a href="index.html">Mehdi Ghaffari Moghaddam</a>
+            <a href="/">Mehdi Ghaffari Moghaddam</a>
           </h5>
           <div class="social-links mt-3 text-center">
             <a href="http://linkedin.com/in/mehdi-ghaffari-moghaddam-1a2b98b9" class="linkedin"><i class="bx bxl-linkedin"></i></a>
